# irefined

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: launcher-rs.yml  launcher.yml
docs/plans/: 2025-10-16-rust-launcher.md
extension/: VUE_MIGRATION.md  package-lock.json  package.json  vite.config.js
extension/src/: feature-manager.js  main.js
extension/src/features/: auto-close-toasts.js  auto-forfeit.js  auto-join.js  auto-register.js  better-join-button.js  collapse-menu.js  logger.css  logger.js  no-sidebars.css  no-sidebars.js  no-toasts.js  settings-panel.css  settings-panel.jsx  share-hosted-session.jsx  share-test-session.jsx  status-bar.css  status-bar.jsx
extension/src/helpers/: queue-bridge.js  selector-observer.js  websockets.js
extension/src/iracing-helpers/: page-detect.js
extension/src/vue/: App.vue  main.js
extension/src/vue/components/: LogButton.vue  LogPanel.vue  QueueItem.vue  SettingsButton.vue  SettingsPanel.vue  StatusBar.vue
extension/src/vue/composables/: useWebSocket.js
launcher/: Pipfile  bootstrap.js  install_config.bat  main.py  pyproject.toml  requirements.txt
launcher-rs/: Cargo.toml  MIGRATION.md  README.md  TESTING.md  build.rs
launcher-rs/resources/: bootstrap.js  local.json
launcher-rs/src/: cdp.rs  config.rs  iracing.rs  lib.rs  local_json.rs  main.rs  monitor.rs  startup.rs  tray.rs  update.rs
launcher-rs/tests/: cdp_tests.rs  config_tests.rs  integration_test.rs  iracing_tests.rs  local_json_tests.rs  monitor_tests.rs  startup_tests.rs  tray_tests.rs  update_tests.rs
(+2 files in other folders)
