[package]
name = "irefined-launcher"
version = "1.5.4"
edition = "2021"
authors = ["Jason Murray"]
description = "iRefined Launcher - System tray app for iRacing UI extension injection"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.27"
tray-icon = "0.15"
rfd = "0.14"
configparser = "3.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
dirs = "5.0"
image = "0.24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
