[project]
name = "iRefined"
version = "0.1"
description = "iRefined Launcher"

[tool.cxfreeze]
executables = [
    { script = "main.py", base = "gui", target_name = "iRefined.exe", icon = "icon.ico" },
]

[tool.cxfreeze.build_exe]
include_files = ["bootstrap.js", "icon.ico", "install_config.bat", "local.json"]
